Reduce --add-opens list
 - remove --add-opens flags if possible.
 - some usages (e.g. reflective constructor invocation) allow to change
   opens into exports when only public API is used
 - add comments to some of the encapsulation breaking usage